# smolclaw

./: .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  AGENTS_SEC.md  CMakeLists.txt  CMakePresets.json  Dockerfile.alpine  Dockerfile.piper  Dockerfile.whisper  Makefile  README.md  SECURITY.md  compile_flags.txt
.github/workflows/: lint.yml  release.yml  test.yml
cmake/: deps.cmake  hardening.cmake  options.cmake  sanitizers.cmake  warnings.cmake
cmake/wamr-vmlib/: CMakeLists.txt
docs/: README.md  abi-policy.md  architecture-map.md  c-style-guide.md  configuration.md  dependency-inventory.md  feature-flags.md  local-state.md  media-services.md  modules.md  overview.md  request-lifecycle.md  run-with-openai.md  runtime-event-loop.md  service-management.md
docs/rules/: CHANNEL_RULES.md  GATEWAY_RULES.md  HARDWARE_RULES.md  MEMORY_BACKEND_RULES.md  OBSERVABILITY_RULES.md  PLUGIN_RULES.md  PROVIDER_RULES.md  RUNTIME_RULES.md  TOOL_RULES.md
examples/: custom_provider.c
examples/script-plugins/: README.md
examples/wasm-plugins/: README.md
examples/wasm-plugins/c-tool/: Makefile  manifest.template.json  sc_echo_c.c
examples/wasm-plugins/rust-tool/: Cargo.toml  manifest.template.json
examples/wasm-plugins/rust-tool/.cargo/: config.toml
examples/wasm-plugins/rust-tool/src/: lib.rs
include/app/: app_commands.h  app_internal.h  app_line_editor.h  app_onboard_internal.h
include/compat/: c23_keyword_compat.h  stdckdint.h
include/config/: config_internal.h
include/contracts/: contracts_internal.h
include/core/: build_info.h
include/json/: json_internal.h
include/media/: media_encoder_internal.h
include/memory/: memory_internal.h
include/net/: curl_global.h  http_client.h
include/runtime/: channel_policy.h  loop_internal.h
include/sc/: acp.h  allocator.h  api.h  async.h  autonomy.h  bootstrap.h  buffer.h  channel.h  cli.h  config.h  contract.h  gateway.h  hardware.h  i18n.h  json.h  log.h  map.h  media.h  memory.h  observer.h  peripheral.h  plugin.h  provider.h  registry.h  result.h  runtime.h  sandbox.h  sc_config_schema.h  security.h  string.h  time.h  toml.h  tool.h  url.h  vector.h  version.h.in
include/security/: sandbox_exec_internal.h  security_internal.h
include/tools/: http_tool_internal.h  mcp_client_internal.h  process_runner.h  tool_internal.h
locales/: en.ftl
schema/: config.schema.json  defaults.json  fields.yaml
src/app/: app_chat.c  app_commands.c  app_cron.c  app_estop.c  app_init_config.c  app_line_editor.c  app_onboard.c  app_onboard_auth.c  app_provider_command.c  app_runtime_commands.c  app_service.c  main.c
src/app/cli/: cli.c
src/autonomy/: autonomy.c
src/channels/: acp.c  orchestrator.c  telegram.c  webhooks.c
src/config/: config.c  config_secret_store.c  config_source.c  sc_config_schema.c
src/contracts/: contracts.c  contracts_handle.c
src/core/: allocator.c  buffer.c  build_info.c  map.c  result.c  string.c  time.c  vector.c
src/gateway/: gateway.c
src/hardware/: hardware.c
src/i18n/: i18n.c
src/json/: json.c  json_schema.c
src/media/: media.c  ogg_opus_encoder.c  piper_tts.c  whisper_transcriber.c
src/memory/: markdown_memory.c  memory_common.c  memory_hydrate.c  none_memory.c  sqlite_memory.c
src/net/: async.c  curl_global.c  http_client.c  url.c
src/observability/: log.c  observer_impls.c
src/plugins/: plugin.c  plugin_python.c  plugin_script_internal.h
src/providers/: claude_code.c  compatible.c  gemini_cli.c  http_providers.c  mock_provider.c  provider_common.c  reliable.c  router.c  unsupported.c
src/registry/: registry.c
src/runtime/: agent.c  bootstrap.c  channel_policy.c  loop.c  turn_queue.c
src/runtime/locales/en/: tools.ftl
src/security/: approval.c  audit.c  domain_matcher.c  estop.c  policy.c  receipts.c  sandbox.c  sandbox_bubblewrap.c  sandbox_container.c  sandbox_firejail.c  sandbox_landlock.c  store.c  workspace_boundary.c
src/tools/: autonomy_tools.c  browser_tool.c  diagnostic_tools.c  file_read.c  file_tools.c  http_tool.c  http_tool_async.c  mcp.c  memory_tools.c  process_runner.c  process_tools.c  search_tools.c  shell.c  time_tool.c  tool_common.c  tool_wrappers.c
tests/fixtures/: gateway.toml  plugin_wasm_tool.inc  provider_openai_env.toml
tests/fixtures/provider_neutral/: media.json  reasoning.json  text.json  tools.json  usage.json
tests/fixtures/workspace/state/: emergency_stop.state
tests/fuzz/: fuzz_url.c
tests/plugins/: plugin_export_descriptor.c  plugin_missing_descriptor.c
tests/support/: mock_contracts.c  mock_contracts.h  test_helpers.c  test_helpers.h
tests/unit/: test_automation_bootstrap.c  test_build_info.c  test_channels.c  test_channels_alignment.c  test_config.c  test_contracts_registry.c  test_core.c  test_foundation_parsers.c  test_gateway.c  test_hardware.c  test_http_client.c  test_media.c  test_memory.c  test_observability_i18n.c  test_philosophy_alignment.c  test_plugins.c  test_providers.c  test_public_headers.c  test_public_headers_cpp.cpp  test_runtime.c  test_security.c  test_third_party_deps.c  test_tools.c  test_validation_smoke.c
tools/: create_telegram_ca.py  gen_config_schema.py  i18n_scan.py  pyproject.toml  run_clang_tidy.py  set_version.py  validate.py
